--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,7 @@
 {
     "type": "project",
-    "license": "proprietary"
+    "license": "proprietary",
+    "require": {
+        "php": "^8.3"
+    }
 }
